# npu

./: .gitignore  1_onnx_helper.py  1_torch2rknn.py  README  README.md  add.sh  addreg.cpp  dump.gdb  dump.py  gem1-dump  minimal_add.c  mul.sh  npu_add_test.py  ops_rockchip.py  surf_stride.md  todo.md
cpp/: CMakeLists.txt  README.md  build_and_run.sh  int32add.cpp  int32add.onnx  int32add.py  int32add.rknn  mul_int32.cpp  ops_int32  ops_int32.cpp
cpp/header/: rkt_registers.h
docs/: rk3588_trm.md  rknn_operators_v2.3.2.md
dump/: add_int32_1x1.txt  gem2-dump  gem6-dump  mul_int32_1x1.txt
header/: rknn_matmul_api.h
include/: delme.py  rknnops.h  rknnops.h.bak  rknnops_conv2d.h  rknpu-ioctl.h
include/ops_rknn_header_backup/: rknpu-ioctl.h
matmul/header/: rknnops.h
models/: mul_int32_1x1.rknn
ops/: ops_int32.cpp  ops_int8  torch2rknn.py
ops/dump/: gem1-dump  gem2-dump
ops/models/: add_int8_1x1.onnx
ops_reg/: README.md  all.sh  alloc_weight_loop.c  alu_fp16  alu_fp16.c  andreg.h  conv1d.sh  conv2d.sh  dump.py  dump2.py  ioctl.gdb  lut.sh  main  main.c  main.h  main_int16  manual_run_output.txt  math.csv  matmul.sh  meson.build  ninja.sh  ops.gdb  reg.gdb  run.sh  run_output.txt  smoke.sh  test.gdb  test.sh
ops_reg/compare/: README.md  reg_add_float16_1x10.h  reg_add_float16_1x2.h  rknn_add_float16_1x10.h  rknn_add_float16_1x2.h
ops_reg/dump/: andreg_regdump.txt  gem1-dump  gem1_tasks.txt  gem2-dump  gem3-dump  gem4-dump
ops_reg/matmul/: README.md  matmul  matmul.c  matmul.gdb  matmul_long  matmul_long.c  run.sh
ops_reg/matmul/dump/: gem1-dump  gem2-dump  gem3-dump  gem4-dump  matmul.h  mmsegfault.h  segfault  sucess_matmul
ops_reg/onnc/: visit_Add.cpp
ops_reg/ref/: alu_fp16  alu_fp16.c  main_int16.c
ops_rknn/: README.md  abs.cpp  activation  activation.cpp  add.cpp  add_int.cpp  alloc_weight_loop_rknn.c  blog.md  cast.cpp  ceil.cpp  cmplt.cpp  cmpne.cpp  compile_rknn.py  conv.py  conv1d_simple  conv1d_simple.cpp  conv1d_taskmodify.gdb  conv2d_multi  conv2d_multi.cpp  conv2d_onnx.py  conv2d_simple  conv2d_simple.cpp  conv_onnx.py  correct.h  div  div.cpp  dump.py  floor.cpp  gen_conv2d_models.py  generate.py  generate_activation_models.py  generate_add.py  generate_cmplt.py  generate_cmpne.py  generate_conv1d_inputs.py  generate_conv1d_models.py  generate_conv2d_models.py  generate_matmul_rknn.py  generate_max.py  generate_min.py  (+60 more)
ops_rknn/act/: README.md  celu.py  exp2.py  exp2_-5_0.py  log_softmax.py  logsigmoid.py  lut.md  lut.py  selu.py  sigmoid.py  sigmoid2  silu.py  silu2
ops_rknn/conv1d_simple_data/conv1d_simple_bs1/: metadata.json
ops_rknn/conv1d_simple_data/conv1d_simple_bs8/: metadata.json
ops_rknn/dump/: conv.h  conv1d_i11_11_w_611.h  conv1d_i81_11_w611.h  conv2d.h  conv2d_i1357_w6323_first_op.h  conv2d_i1357_w6323_fp16.h  conv2d_i1357_w6323_fp16_fulldump.h  gem1-dump  gem1_tasks.txt  gem2-dump  gem2_tasks.txt  gem3-dump  gem4-dump  gem5-dump  gem6-dump  gem6-dump-trim  relu.h  tinygrad_i1357_w6323.h
ops_rknn/models/: add_float16_1x1.onnx  add_float16_1x1.rknn  add_float16_1x2.onnx  add_float16_1x2.rknn  add_int32_1x1.onnx  add_int32_1x1.rknn  add_int8_1x1.rknn  div_int32_1x1.onnx  div_int32_1x1.rknn  mul_float16_1x1.onnx  mul_float16_1x1.rknn  mul_float16_1x2.onnx  mul_float16_1x2.rknn  mul_int32_1x1.onnx  sub_int32_1x1.onnx  sub_int32_1x1.rknn
ops_rknn/ref/: ops_int8.cpp  reference_int8add.cpp
